Complete 11.1 but 10.3 can't see graph on grafana

--- a/docker-compose-files/configs/prometheus.yml
+++ b/docker-compose-files/configs/prometheus.yml
@@ -3,4 +3,4 @@ scrape_configs:
     scrape_interval: 10s
     metrics_path: '/q/metrics'
     static_configs:
-      - targets: [ 'host.docker.internal:8083' ]
+      - targets: [ 'localhost:8083' ]
